--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,9 +1,5 @@
 version: '2.1'
 
-networks:
-  monitor-net:
-    driver: bridge
-
 volumes:
     prometheus_data: {}
     grafana_data: {}
@@ -26,8 +22,7 @@ services:
     restart: unless-stopped
     expose:
       - 9090
-    networks:
-      - monitor-net
+    network_mode: bridge
     labels:
       org.label-schema.group: "monitoring"
       traefik.enable: false
@@ -43,8 +38,7 @@ services:
     restart: unless-stopped
     expose:
       - 9093
-    networks:
-      - monitor-net
+    network_mode: bridge
     labels:
       org.label-schema.group: "monitoring"
       traefik.enable: false
@@ -64,8 +58,7 @@ services:
     restart: unless-stopped
     expose:
       - 9100
-    networks:
-      - monitor-net
+    network_mode: bridge
     labels:
       org.label-schema.group: "monitoring"
       traefik.enable: false
@@ -82,8 +75,7 @@ services:
     restart: unless-stopped
     expose:
       - 8080
-    networks:
-      - monitor-net
+    network_mode: bridge
     labels:
       org.label-schema.group: "monitoring"
       traefik.enable: false
@@ -104,8 +96,7 @@ services:
     restart: unless-stopped
     expose:
       - 3000
-    networks:
-      - monitor-net
+    network_mode: bridge
     labels:
       org.label-schema.group: "monitoring"
       traefik.enable: false
@@ -116,8 +107,7 @@ services:
     restart: unless-stopped
     expose:
       - 9091
-    networks:
-      - monitor-net
+    network_mode: bridge
     labels:
       org.label-schema.group: "monitoring"
       traefik.enable: false
@@ -136,8 +126,7 @@ services:
       - ADMIN_USER=${ADMIN_USER:-admin}
       - ADMIN_PASSWORD=${ADMIN_PASSWORD:-admin}
     restart: unless-stopped
-    networks:
-      - monitor-net
+    network_mode: bridge
     labels:
       org.label-schema.group: "monitoring"
       traefik.backend: monitor
