--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,9 @@
 version: '2.1'
 
+networks:
+  monitor-net:
+    driver: bridge
+
 volumes:
     prometheus_data: {}
     grafana_data: {}
@@ -22,6 +26,8 @@ services:
     restart: unless-stopped
     ports:
       - "9090:9090"
+    networks:
+      - monitor-net
     network_mode: bridge
     labels:
       org.label-schema.group: "monitoring"
@@ -38,6 +44,8 @@ services:
     restart: unless-stopped
     ports:
       - "9093:9093"
+    networks:
+      - monitor-net
     network_mode: bridge
     labels:
       org.label-schema.group: "monitoring"
@@ -58,6 +66,8 @@ services:
     restart: unless-stopped
     ports:
       - "9100:9100"
+    networks:
+      - monitor-net
     network_mode: bridge
     labels:
       org.label-schema.group: "monitoring"
@@ -75,6 +85,8 @@ services:
     restart: unless-stopped
     ports:
       - "9081:8080"
+    networks:
+      - monitor-net
     network_mode: bridge
     labels:
       org.label-schema.group: "monitoring"
@@ -96,6 +108,8 @@ services:
     restart: unless-stopped
     ports:
       - "9080:3000"
+    networks:
+      - monitor-net
     network_mode: bridge
     labels:
       org.label-schema.group: "monitoring"
@@ -110,6 +124,8 @@ services:
     restart: unless-stopped
     ports:
       - "9091:9091"
+    networks:
+      - monitor-net
     network_mode: bridge
     labels:
       org.label-schema.group: "monitoring"
