--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,9 +1,5 @@
 version: '2.1'
 
-networks:
-  monitor-net:
-    driver: bridge
-
 volumes:
     prometheus_data: {}
     grafana_data: {}
@@ -26,8 +22,12 @@ services:
     restart: unless-stopped
     ports:
       - "9090:9090"
-    networks:
-      - monitor-net
+    network_mode: bridge
+    links:
+    - nodeexporter:nodeexporter
+    - cadvisor:cadvisor
+    - pushgateway:pushgateway
+    - alertmanager:alertmanager
     labels:
       org.label-schema.group: "monitoring"
       traefik.enable: false
@@ -43,8 +43,7 @@ services:
     restart: unless-stopped
     ports:
       - "9093:9093"
-    networks:
-      - monitor-net
+    network_mode: bridge
     labels:
       org.label-schema.group: "monitoring"
       traefik.enable: false
@@ -64,8 +63,7 @@ services:
     restart: unless-stopped
     ports:
       - "9100:9100"
-    networks:
-      - monitor-net
+    network_mode: bridge
     labels:
       org.label-schema.group: "monitoring"
       traefik.enable: false
@@ -82,8 +80,7 @@ services:
     restart: unless-stopped
     ports:
       - "9081:8080"
-    networks:
-      - monitor-net
+    network_mode: bridge
     labels:
       org.label-schema.group: "monitoring"
       traefik.enable: false
@@ -104,8 +101,9 @@ services:
     restart: unless-stopped
     ports:
       - "9080:3000"
-    networks:
-      - monitor-net
+    network_mode: bridge
+    links:
+    - prometheus:prometheus
     labels:
       org.label-schema.group: "monitoring"
       traefik.backend: monitor
@@ -119,8 +117,7 @@ services:
     restart: unless-stopped
     ports:
       - "9091:9091"
-    networks:
-      - monitor-net
+    network_mode: bridge
     labels:
       org.label-schema.group: "monitoring"
       traefik.enable: false
